--- a/index.html
+++ b/index.html
@@ -447,15 +447,15 @@
     <!-- Модальное окно -->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button data-modal-close type="button" class="modal-btn" data-modal-open>
-                <svg class="icon-close" width="18" height="18">
-                    <use href="./images/icons.svg#icon-close" ></use>
+            <button data-modal-close type="button" class="modal-btn">
+                <svg class="icon-close" width="18" height="18" >
+                    <use href="./images/icons.svg#icon-close-black" ></use>
                 </svg>
             </button>
         </div>
     </div>
 
-
+<!-- ./images/icons.svg#icon-close -->
 
 
     <script src="./modal.js"></script>
